--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <script src="lib/jquery_lite.js" type="text/javascript"></script>
   </head>
   <body>
+    <ul class="list">
+      <li class="element">Hi</li>
+    </ul>
+    <ul class="test">
 
+    </ul>
   </body>
 </html>
