finished phase i: added remove, find, parent, and children methods.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <body>
     <ul class="list">
       <li class="element">Hi</li>
+      <li class="">Hi
+        <li class="element">Grandshild</li>
+      </li>
     </ul>
     <ul class="test">
 
