--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <script src="lib/jquery_lite.js" type="text/javascript"></script>
+    <script src="lib/code.js" type="text/javascript"></script>
   </head>
   <body>
     <ul class="list">
